Cannot flick to the end of a horizontal list view width LayoutMirroring

minXExtent calculated the offset due to highlight range incorrectly
(reversed) when mirroring enabled.  Also us same algorithm for fixup()
in GridView and ListView uses.

Change-Id: Id7e7e540a894d6f520685b237d34b4186bc427b6
Task-number: QTBUG-21756
Reviewed-by: Bea Lam